@@ -10,6 +10,7 @@ Version 2.0.20
 
 Improvements
     ST-241 Add polling option for 'servers terminate' action
+    ST-243 Add polling option for 'servers launch' & 'servers reboot' actions
 
 Fixed
 
